# maxproxy

./: .gitignore  README.md  components.json  package-lock.json  package.json  vite.config.ts
.github/workflows/: release.yml
src/: App.css  App.tsx  App.tsx.backup
src-tauri/: Cargo.toml  tauri.conf.json  tauri.conf.json.backup
src-tauri/capabilities/: default.json
src-tauri/src/: cert.rs  lib.rs  logging.rs  main.rs  oauth.rs  proxy.rs  storage.rs
src/components/layout/: Layout.tsx
src/components/ui/: alert.tsx  badge.tsx  button.tsx  card.tsx
src/contexts/: AppContext.tsx
src/lib/: api.ts  constants.ts
src/pages/: AboutPage.tsx  AuthPage.tsx  LogsPage.tsx  ProxyPage.tsx  SettingsPage.tsx
src/types/: index.ts
